--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ after_script:
   - git config user.email "${USER_EMAIL}"
   - git add .
   - git commit -m "publish gitbook"
-  - git push --force --quiet "https://${ACC_token}@${GH_REF}" master:${BRANCH}
+  - git push --force --quiet "https://${ACC_TOKEN}@${GH_REF}" master:${BRANCH}
 # E: Build LifeCycle
 
 # 只对某个分支行为生效
